--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,11 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(thirdparty/ctp/include)
 
 # -L
-link_directories(thirdparty/ctp/lib)
+if (CMAKE_HOST_APPLE)
+    link_directories(thirdparty/ctp/lib/mac_arm64)
+elseif(CMAKE_HOST_LINUX)
+    link_directories(thirdparty/ctp/lib/lin64)
+endif()
 
 add_executable(CTPTest src/main.cpp
         src/md/CMduserHandler.cpp
