wip: 抽离出strategy_runner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,20 @@ add_executable(master src/master_cmd.cpp
         src/yijinjing/master/MyMaster.cpp
         src/yijinjing/locator/MyLocator.cpp
         src/yijinjing/locator/MyLocator.h
-        src/yijinjing/master/MyMaster.h)
+        src/yijinjing/master/MyMaster.h
+)
 
 target_link_libraries(master yijinjing)
+
+add_executable(strategy_runner src/strategy_runner.cpp
+        src/yijinjing/locator/MyLocator.cpp
+        src/yijinjing/locator/MyLocator.h
+        src/strategy/runner.cpp
+        src/strategy/runner.h)
+target_link_libraries(strategy_runner yijinjing)
+
+
+ADD_COMPILE_DEFINITIONS(SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_INFO)
+ADD_COMPILE_DEFINITIONS(SPDLOG_FMT_EXTERNAL)
+ADD_COMPILE_DEFINITIONS(SPDLOG_NO_NAME)
+ADD_COMPILE_DEFINITIONS(SPDLOG_NO_ATOMIC_LEVELS)
